# SimpleDocFileReaderLibrary

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  SimpleDocFileReaderLibrary.pro  build.bat  build.sh  main.cpp  stdincludes.h  variablevisualize.hpp
ClassBinaryStreamWrapper/: binarystreamwrapper.cpp  binarystreamwrapper.hpp
ClassContainer/: container.h
ClassContainer/ClassTextContainer/: textcontainer.cpp  textcontainer.h
ClassInputBinaryStream/: inputbinarystream.cpp  inputbinarystream.h
ClassTextContainer/: textcontainer.h
ClassWindowsCompoundBinaryFileFormatReader/: wcbff_structures.h  windowscompoundbinaryfileformatreader.cpp  windowscompoundbinaryfileformatreader.h
ClassWindowsCompoundBinaryFileFormatReader/ClassStreamsMenager/: streamsmenager.cpp  streamsmenager.h
ClassWordBinaryFileFormatReader/: wbff_structures.h  wordbinaryfileformatreader.cpp  wordbinaryfileformatreader.h
Containers/ClassContainer/: container.cpp  container.h
Containers/ClassImageContainer/: imagecontainer.cpp  imagecontainer.h
Containers/ClassTableCellContainer/: tablecellcontainer.cpp  tablecellcontainer.h
Containers/ClassTableContainer/: tablecontainer.cpp  tablecontainer.h
Containers/ClassTableLineContainer/: tablelinecontainer.cpp  tablelinecontainer.h
Containers/ClassTextContainer/: textcontainer.cpp  textcontainer.h
WindowsCompoundBinaryFileformat/: wcbff_structures.h
include/: SDRL.h
include/SDRL/: DocDocument.hpp  DocumentInfo.hpp  (+7 more)
src/: DocDocument.cpp  SDRL.cpp  compoundBFFR.cpp  inputbinarystream.cpp  wbff_structures.cpp  wordBFFR.cpp
(+35 files in other folders)
